force-app/main/default/objects/Bill_Line_Item__c/Bill_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Bill Line Item</label>
    <nameField>
        <label>Bill Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>