force-app/main/default/objects/Bill_Line_Item__c/fields/Bills__c.field-meta.xml
<CustomField>
    <fullName>Bills__c</fullName>
    <label>Bills</label>
    <referenceTo>Bills__c</referenceTo>
    <relationshipLabel>Bill Line Items</relationshipLabel>
    <relationshipName>Bill_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>