force-app/main/default/objects/Bill_Line_Item__c/fields/Charge_Master__c.field-meta.xml
<CustomField>
    <fullName>Charge_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Master</label>
    <referenceTo>Charge_Master__c</referenceTo>
    <relationshipLabel>Bill Line Items</relationshipLabel>
    <relationshipName>Bill_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>